--- a/journal/templates/journal/news_detail.html
+++ b/journal/templates/journal/news_detail.html
@@ -6,7 +6,7 @@
     <div class="blog-post">
         <h2 class="blog-post-title">{{ news.title }}</h2>
         <p class="blog-post-meta">{{ news.published }}</p>
-        <p>{{ news.content }}</p>
+        <p>{{ news.content|safe }}</p>
     </div>
    
     <div class="container">
