--- a/templates/fireshow/main.html
+++ b/templates/fireshow/main.html
@@ -2,8 +2,22 @@
 {% load sitetree %}
 
 {% block content %}
-    <div class="container-fluid">
-        {% include "fireshow/carousel.html" %}
+    <div class="container-fluid"><!-- /.carousel -->
+        <div id="large_carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img data-src="holder.js/1000x400/auto/#777:#7a7a7a">
+                </div>
+                <div class="item">
+                    <img data-src="holder.js/1000x400/auto/#666:#6a6a6a">
+                </div>
+                <div class="item">
+                    <img data-src="holder.js/1000x400/auto/#555:#5a5a5a">
+                </div>
+            </div>
+            <a class="left carousel-control" href="#large_carousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+            <a class="right carousel-control" href="#large_carousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+        </div><!-- /.carousel -->
     </div>
 
     <div class="container">
@@ -21,7 +35,20 @@
     </div>
 
     <div class="container">
-        images_placeholder
+        Наши фотографии
+        <div id="small_carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="col-xs-12 col-md-8">
+                    {% for p in small_carousel %}
+                        <div class="item {% if forloop.first %}active{% endif %}">
+                            <img data-src="holder.js/300x150/auto/#777:#7a7a7a/text:First slide">
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+            <a class="left carousel-control" href="#small_carousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+            <a class="right carousel-control" href="#small_carousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+        </div>
     </div>
     
 {% endblock %}
