--- a/photo/templates/photo/photo_detail.html
+++ b/photo/templates/photo/photo_detail.html
@@ -8,7 +8,7 @@
         <div class="page-header">
             <h1>{{ photo.title }}</h1>
         </div>
-            <img src="{{ photo.filepath }}" alt="{{ photo.title }}">
+            <img src="{{ photo.filepath.url }}" alt="{{ photo.desc }}">
     </div>
     
     <div class="container">
