--- a/templates/fireshow/base.html
+++ b/templates/fireshow/base.html
@@ -1,4 +1,4 @@
-﻿{% load static from staticfiles %}
+{% load static from staticfiles %}
 {% load sitetree %}
 <!DOCTYPE html>
 <html lang="ru" xmlns="http://www.w3.org/1999/xhtml">
