--- a/templates/fireshow/footer.html
+++ b/templates/fireshow/footer.html
@@ -1,4 +1,4 @@
-﻿{% load sitetree %}
+{% load sitetree %}
 
 <div id="bot-navbar" class="container-fluid">
     <div class="navbar-collapse collapse">
