--- a/templates/fireshow/header.html
+++ b/templates/fireshow/header.html
@@ -1,4 +1,4 @@
-﻿{% load static from staticfiles %}
+{% load static from staticfiles %}
 {% load sitetree %}
 
 <div id="top-image" class="container-fluid">
