--- a/photo/templates/photo/photo_list.html
+++ b/photo/templates/photo/photo_list.html
@@ -7,20 +7,19 @@
             <h1>Фотогалерея</h1>
     </div>
     
-    {% for p in object_list %}
-        <div class="row">
-            <div class="col-xs-12 col-md-8">
-                <a href="{% url 'photo:photo_detail' p.id %}" class="thumbnail">
-                    <img class="thumbnail" src="{{ p.filepath.url }}" alt="{{ p.desc }}">
+    <div class="row">
+        {% for p in object_list %}
+            <div class="col-md-2">
+                <a href="{% url 'photo:photo_detail' p.id %}">
+                    <img class="thumbnail image-t" src="{{ p.filepath.url }}" alt="{{ p.desc }}">
                 </a>
             </div>
-        </div>
-
-    {% empty %}
-        <div class="alert alert-info">
-            <strong>Ой!</strong> Пока никто не добавил фотографий в галерею.
-        </div>
-    {% endfor %}
+        {% empty %}
+            <div class="alert alert-info">
+                <strong>Ой!</strong> Пока никто не добавил фотографий в галерею.
+            </div>
+        {% endfor %}
+    </div>
 
     {% if paginator.num_pages > 1 %}
         <ul class="pager">
