--- a/templates/fireshow/base.html
+++ b/templates/fireshow/base.html
@@ -17,8 +17,7 @@
 
     </head>
     <body>
-
-        <div class="container-fluid">
+        <div class="container">
             {% include "fireshow/header.html" %}
         </div> 
        
@@ -27,14 +26,13 @@
             {% endblock %}
         </div>
         
-        <div class="container-fluid">
+        <div class="container">
             {% include "fireshow/footer.html" %}
         </div>
 
          {% block javascript %}
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
             <script src="{% static "js/bootstrap.min.js" %}" type="text/javascript"></script>
-            <script src="{% static "js/holder.min.js" %}" type="text/javascript"></script>
         {% endblock %}
     </body>
 </html>
