--- a/templates/fireshow/header.html
+++ b/templates/fireshow/header.html
@@ -1,14 +1,14 @@
 {% load static from staticfiles %}
 {% load sitetree %}
 
-<div id="top-image" class="container-fluid">
-    <img id="img-left-side" class="img-stretched" src="{% static "img/stretched-left.png" %}" />
-    <img id="img-right-side" class="img-stretched" src="{% static "img/stretched-right.png" %}" />
+<div id="top-image" class="container">
+    <img src="{% static "img/stretched-right.png" %}" />   
+    <img src="{% static "img/logo.png" %}" />
+    <img src="{% static "img/stretched-left.png" %}" />
 </div> 
 
-<nav class="navbar navbar-default">
-  <div id="top-navbar" class="container-fluid">
-    <div class="navbar-header">
+<nav id="top-navbar" class="navbar navbar-inverse">
+    <div class="container navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -20,5 +20,4 @@
         {% sitetree_tree from "menu" template "sitetree/navbar.html" %}
       </ul>
     </div>
-  </div>
 </nav>
