--- a/templates/fireshow/main.html
+++ b/templates/fireshow/main.html
@@ -1,18 +1,19 @@
 {% extends "fireshow/base.html" %}
+{% load static from staticfiles %}
 {% load sitetree %}
 
 {% block content %}
-    <div class="container-fluid"><!-- /.carousel -->
+    <div class="container"><!-- /.carousel -->
         <div id="large_carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="item active">
-                    <img data-src="holder.js/1000x400/auto/#777:#7a7a7a">
+                    <img src="{% static "img/slide1.png" %}">
                 </div>
                 <div class="item">
-                    <img data-src="holder.js/1000x400/auto/#666:#6a6a6a">
+                    <img src="{% static "img/slide1.png" %}">
                 </div>
                 <div class="item">
-                    <img data-src="holder.js/1000x400/auto/#555:#5a5a5a">
+                    <img src="{% static "img/slide1.png" %}">
                 </div>
             </div>
             <a class="left carousel-control" href="#large_carousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
@@ -22,11 +23,13 @@
 
     <div class="container">
         <p>
-            Огненное шоу — разновидность уличного перформанса (выступления оригинального жанра), 
-            значительная часть которого заключается в исполнении трюков с огнем, а также использовании огня для реализации творческой идеи. 
-            Огненное шоу, как правило, исполняется группой из нескольких артистов, традиционно называемой театр огня. 
-            Артистов театра огня обычно называют фаерщиками, спиннерами или просто артистами оригинального жанра. 
-            В современном мире фаерщики представляют собой отдельную субкультуру со своими обычаями, традициями и языком.
+            <i>
+                Огненное шоу — разновидность уличного перформанса (выступления оригинального жанра), 
+                значительная часть которого заключается в исполнении трюков с огнем, а также использовании огня для реализации творческой идеи. 
+                Огненное шоу, как правило, исполняется группой из нескольких артистов, традиционно называемой театр огня. 
+                Артистов театра огня обычно называют фаерщиками, спиннерами или просто артистами оригинального жанра. 
+                В современном мире фаерщики представляют собой отдельную субкультуру со своими обычаями, традициями и языком.
+            </i>
         </p>
     </div>
 
@@ -35,20 +38,13 @@
     </div>
 
     <div class="container">
-        Наши фотографии
-        <div id="small_carousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="col-xs-12 col-md-8">
-                    {% for p in small_carousel %}
-                        <div class="item {% if forloop.first %}active{% endif %}">
-                            <img data-src="holder.js/300x150/auto/#777:#7a7a7a/text:First slide">
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-            <a class="left carousel-control" href="#small_carousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-            <a class="right carousel-control" href="#small_carousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+        <h2><span>Фотогаллерея</span></h2>
+        <div class="row">
+            {% for p in small_carousel %}
+                <div class="col-md-2">
+                    <img class="thumbnail image-t" src="{{ p.filepath.url }}">
+                 </div>
+            {% endfor %}
         </div>
-    </div>
-    
+    </div>      
 {% endblock %}
