--- a/video/templates/video/video_detail.html
+++ b/video/templates/video/video_detail.html
@@ -3,15 +3,12 @@
 {% block title %}{{ video.title }} | {{ block.super }}{% endblock %}
 
 {% block content %}
-
     <div class="container">
-        
-    </div>
-    
-    <div class="container">
-        {% block disqus %}
-            {% include "fireshow/disqus.html" %}
-        {% endblock %}
-    </div>
+        <div class="page-header">
+            <h1>{{ video.title }}</h1>
+        </div>
 
+            <iframe src="{{ video.url }}" frameborder="0" allowfullscreen></iframe>
+
+    </div>
 {% endblock %}
