--- a/journal/templates/journal/news_detail.html
+++ b/journal/templates/journal/news_detail.html
@@ -3,9 +3,13 @@
 {% block title %}{{ news.title }} | {{ block.super }}{% endblock %}
 
 {% block content %}
-    <div class="blog-post">
-        <h2 class="blog-post-title">{{ news.title }}</h2>
-        <p class="blog-post-meta">{{ news.published }}</p>
-        <p>{{ news.content|safe }}</p>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="blog-post">
+            <h2 class="blog-post-title">{{ news.title }}</h2>
+            <p class="blog-post-meta">{{ news.published }}</p>
+            <p>{{ news.content|safe }}</p>
+        </div>
     </div>
+</div>
 {% endblock %}
