--- a/photo/templates/photo/photo_list.html
+++ b/photo/templates/photo/photo_list.html
@@ -3,15 +3,19 @@
 {% block title %}{{ "Фотогалерея" }} | {{ block.super }}{% endblock %}
 
 {% block content %}
-    <div class="page-header">
-            <h1>Фотогалерея</h1>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="page-header">
+                    <h1>Фотогалерея</h1>
+            </div>
+         </div>
     </div>
-    
+   
     <div class="row">
         {% for p in object_list %}
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-md-3">
                 <a href="{% url 'photo:photo_detail' p.id %}">
-                    <img class="thumbnail image-t" src="{{ p.filepath.url }}" alt="{{ p.desc }}">
+                    <img class="thumbnail img-responsive img-gallery" src="{{ p.filepath.url }}" alt="{{ p.desc }}">
                 </a>
             </div>
         {% empty %}
@@ -22,22 +26,26 @@
     </div>
 
     {% if paginator.num_pages > 1 %}
-        <ul class="pager">
-            {% if page_obj.has_previous %}
-                <li>
-                    <a href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-            {% endif %}
-                <li class="active"><a href="?page={{ paginator.number }}">{{ paginator.number }}<span class="sr-only"></span></a></li>
-            {% if page_obj.has_next %}
-                <li>
-                    <a href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            {% endif %}
-        </ul>
+        <div class="row">
+            <div class="col-xs-12">
+                <ul class="pagination">
+                    {% if page_obj.has_previous %}
+                        <li>
+                            <a href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                    {% endif %}
+                        <li class="active"><a href="?page={{ paginator.number }}">{{ paginator.number }}<span class="sr-only"></span></a></li>
+                    {% if page_obj.has_next %}
+                        <li>
+                            <a href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
     {% endif %}
 {% endblock %}
