--- a/templates/fireshow/footer.html
+++ b/templates/fireshow/footer.html
@@ -1,10 +1,30 @@
 {% load static from staticfiles %}
 {% load sitetree %}
 
-<nav id="bot-navbar" class="navbar navbar-inverse">
-    <ul class="nav navbar-nav">
-        {% sitetree_tree from "menu" template "sitetree/navbar.html" %}
-    </ul>
+<nav class="navbar navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bot-navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span> 
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="bot-navbar">
+            <ul class="nav navbar-nav">
+                {% sitetree_tree from "menu" template "sitetree/navbar.html" %}
+            </ul>
+        </div>
+    </div>
 </nav>
 
-<div id="bot-image" class="container-fluid"></div> 
+<footer>
+    <div class="container-fluid">
+        <div class="row">
+            <div id="top-image" class="col-xs-12">
+                <div id="bot-image"></div> 
+            </div>
+        </div>
+    </div>
+</footer>
