--- a/video/templates/video/video_list.html
+++ b/video/templates/video/video_list.html
@@ -3,12 +3,19 @@
 {% block title %}{{ "Видео галерея" }} | {{ block.super }}{% endblock %}
 
 {% block content %}
-
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="page-header">
+                    <h1>Видео галерея</h1>
+            </div>
+        </div>
+    </div>
+    
     <div class="row">
         {% for p in object_list %}
-            <div class="col-md-4">
+            <div class="col-xs-12 col-sm-6 col-md-4">
                 <a href="{% url 'video:video_detail' p.id %}">
-                    <img class="thumbnail video-t" src="{{ p.thumbnail.url }}">
+                    <img class="thumbnail img-responsive img-gallery" src="{{ p.thumbnail.url }}">
                 </a>
             </div>
         {% empty %}
@@ -17,23 +24,28 @@
             </div>
         {% endfor %}
     </div>
+
     {% if paginator.num_pages > 1 %}
-        <ul class="pager">
-            {% if page_obj.has_previous %}
-                <li>
-                    <a href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-            {% endif %}
-                <li class="active"><a href="?page={{ paginator.number }}">{{ paginator.number }}<span class="sr-only"></span></a></li>
-            {% if page_obj.has_next %}
-                <li>
-                    <a href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            {% endif %}
-        </ul>
+        <div class="row">
+            <div class="col-xs-12">
+                <ul class="pagination">
+                    {% if page_obj.has_previous %}
+                        <li>
+                            <a href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                    {% endif %}
+                        <li class="active"><a href="?page={{ paginator.number }}">{{ paginator.number }}<span class="sr-only"></span></a></li>
+                    {% if page_obj.has_next %}
+                        <li>
+                            <a href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
     {% endif %} 
 {% endblock %}
