--- a/templates/fireshow/main.html
+++ b/templates/fireshow/main.html
@@ -49,11 +49,13 @@
                         <div class="col-xs-4 col-sm-12">
                             <iframe class="vid-detail-sm" src="{{ v.url }}" frameborder="0" allowfullscreen></iframe>
                         </div>
-            {% endif %}                       
-        {% endfor %}
+            {% endif %}
+            {% if forloop.last %}
                     </div>
                 </div>
-            </div>
+            {% endif %}                                  
+        {% endfor %}     
+    </div>
 
     <div class="row">
         <div class="col-xs-12">
